--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ *{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+ }
+
 
 :root {
   --background: #ffffff;
